# rust_mozprofile

./: Cargo.toml
src/: lib.rs  preferences.rs  prefreader.rs  profile.rs
