[package]

name = "mozprofile"
version = "0.2.0"
authors = ["Mozilla Tools and Automation <auto-tools@mozilla.com>"]
description = "Library for working with Mozilla profiles."
repository = "https://github.com/jgraham/rust_mozprofile"
license = "MPL-2.0"
license-file = "LICENSE"

[dependencies]
log = "0.3"
tempdir = "0.3.4"
lazy_static = "0.1"